@@ -1,7 +1,9 @@
 AUX man-pages-2.08-updates.patch 351 RMD160 090c1d31d4589fa19f8cb7e287a84f4f18e612e1 SHA1 d0092cdc98bc4326c7b9deffbeb9fd4666635f3b SHA256 c1302276b420acf3d9447cb3436ee2b70567b92917d7cf912c59f622086d1e37
 DIST man-pages-2.44.tar.bz2 1828928 RMD160 4e397462583fe0d502b04b9328543dfb2831f898 SHA1 b2dfd74c6dca09b65b53fba4c9555d12e8b3d745 SHA256 3bce45da8e2e925bc4bc096639465cd59386665ad90be4ec2c4d58e2ae02afb5
 DIST man-pages-2.46.tar.bz2 1828179 RMD160 f2aaf4d2d369daf1753736501c7cc742f0156dfe SHA1 424e0b0b02b238338888b01fe8cfb8f249aa1c40 SHA256 7c6e807df700c5f5bd04263e1f3cfce8ea5044c6c95b7212943b3c538722bc11
+DIST man-pages-2.48.tar.bz2 1820729 RMD160 d31da3ffab629670675b3f639f9e693d5773c526 SHA1 f630d2443380443515e05bbdb2f547dee8138343 SHA256 46cfe8330a1c4497bb8b5afc0e84961bd9c588ecea7f5dcdc114e0c019ffc401
 EBUILD man-pages-2.44.ebuild 1397 RMD160 56af8eeca1ca75a3a3a8dc1f34d652164ca388d0 SHA1 ba9c93d9dd1e18fd7ff4a2f34e06550ff61d8063 SHA256 49996886aa6a0c5190d57beeb48a5f93349842126086cb15a16b09bd9b58f03f
 EBUILD man-pages-2.46.ebuild 1483 RMD160 a29db25d60f558d04156c26cd29bc156bca302d0 SHA1 9c6ede7b1c479609115e3a8d33468ada4c929165 SHA256 7bd141b245d546dcc4ab01463105aa00692da3d21e5251cacf94c5b3bdfdec04
-MISC ChangeLog 9212 RMD160 8bc068baa655326e09bb7e37e1c064aca18eb130 SHA1 cf9a0cd561ef12b2c7eb21f59ab9c2b8717c861b SHA256 7b96aae2356fc6763098636d63be6f746eb2858e5aff41c9c20219a5322977f6
+EBUILD man-pages-2.48.ebuild 1483 RMD160 14cb6f5060ac3adb3120095bba35f6ee18cc221e SHA1 efa2d4b7612b011b44bbe0c665197a8c708fb9f4 SHA256 4bb5a5809577d0bd0ce868538e12b5f74f8f18c302676b6d91d452653f1dd0a7
+MISC ChangeLog 9334 RMD160 38c5c7999749477c9cbc4ee2339b6a1ceeb38a57 SHA1 72a30661fbedef2cc99b4ed0ac1c645ff2a2a366 SHA256 72ea361d9a89ac8609e20a2ad16a5c96e14ca8dc900913fdf25e95161b70418f
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
